# mine_detection

./: .gitignore  Makefile  README.md  pyproject.toml
api/: app.py  database.py  models.py  utils.py
deployment/: Dockerfile.api  requirements-api.txt
mine_detection/: api.py  config.py  data.py  experiment.py  train.py
models/: production_model.pkl
monitoring/: monitor.py
notebooks/: 1.0-rg-eda.ipynb
reports/: drift.html
scripts/: download_data.py  load_train_to_db.py  start_mlflow_server.py
tests/: test_api.py
